<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.TreinoActivity">

    <View
        android:id="@+id/view_treino_top"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_treino_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treino_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/view_treino_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_treino_top" />

    <TextView
        android:id="@+id/tv_treino_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/treino_name_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_treino_top" />

    <EditText
        android:id="@+id/et_treino_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/treino_name_hint"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_treino_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_treino_name_title"
        app:layout_constraintTop_toTopOf="@id/tv_treino_name_title" />

    <TextView
        android:id="@+id/tv_treino_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/treino_description_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_treino_name" />

    <EditText
        android:id="@+id/et_treino_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="21dp"
        android:hint="@string/treino_description_hint"
        android:textSize="20sp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_treino_description_title"
        app:layout_constraintTop_toBottomOf="@id/et_treino_name"  />

    <TextView
        android:id="@+id/tv_treino_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/treino_data_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_treino_description" />

    <EditText
        android:id="@+id/et_treino_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/treino_data_hint"
        android:inputType="date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_treino_data_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_treino_data_title"
        app:layout_constraintTop_toTopOf="@id/tv_treino_data_title" />

    <Button
        android:id="@+id/btn_treino_save"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_treino_data"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>