<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ExercicioActivity">

    <View
        android:id="@+id/view_exercicio_top"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_exercicio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercicio_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/view_exercicio_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_exercicio_top" />

    <TextView
        android:id="@+id/tv_exercicio_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/exercicio_name_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_exercicio_top" />

    <EditText
        android:id="@+id/et_exercicio_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/exercicio_name_hint"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_exercicio_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_exercicio_name_title"
        app:layout_constraintTop_toTopOf="@id/tv_exercicio_name_title" />

    <TextView
        android:id="@+id/tv_exercicio_comments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/exercicio_comments_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_exercicio_name" />

    <EditText
        android:id="@+id/et_exercicio_comments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="12dp"
        android:gravity="top|start"
        android:hint="@string/exercicio_comments_hint"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:singleLine="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_exercicio_comments_title"
        app:layout_constraintTop_toBottomOf="@id/et_exercicio_name" />

    <TextView
        android:id="@+id/tv_exercicio_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/exercicio_photo_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_exercicio_comments" />

    <EditText
        android:id="@+id/et_exercicio_photo_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/exercicio_photo_hint"
        android:inputType="textUri"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_exercicio_data_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_exercicio_data_title"
        app:layout_constraintTop_toTopOf="@id/tv_exercicio_data_title" />

    <Button
        android:id="@+id/btn_exercicio_save"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_exercicio_photo_url"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>