<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".ui.activities.RegisterActivity">

    <ImageView
        android:id="@+id/iv_register_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_lealapps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="20dp"
        android:hint="@string/register_hint_name"
        android:inputType="textAutoComplete"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_register_logo" />

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="20dp"
        android:hint="@string/register_hint_email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_name" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="20dp"
        android:hint="@string/register_hint_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_email" />

    <EditText
        android:id="@+id/et_register_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="20dp"
        android:hint="@string/register_hint_confirm_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:text="@string/register_btn_enter"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_confirm_password" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/register_btn_back"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>