<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_lealapps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="20dp"
        android:hint="@string/login_hint_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="20dp"
        android:hint="@string/login_hint_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_email" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/orange"
        android:text="@string/login_btn_enter"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_password" />

    <TextView
        android:id="@+id/tv_login_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_text_no_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_login_do_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/login_text_do_register"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_login_no_account"
        app:layout_constraintTop_toTopOf="@id/tv_login_no_account" />

</androidx.constraintlayout.widget.ConstraintLayout>